--- a/webria2023/package.json
+++ b/webria2023/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-material-design": "^4.1.3",
     "core-js": "^3.8.3",
+    "particles.js": "^2.0.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
